[gd_scene load_steps=46 format=3 uid="uid://ch6aow6ds2p7u"]

[ext_resource type="Script" path="res://scripts/debug.gd" id="1_ap15m"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_wsuso"]
[ext_resource type="Script" path="res://scripts/tt_meter.gd" id="2_23gem"]
[ext_resource type="Texture2D" uid="uid://bar8nuywyfnus" path="res://assets/sprites/justcourt.png" id="3_c3oly"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="3_r17qu"]
[ext_resource type="Texture2D" uid="uid://mtn13riidvbw" path="res://assets/sprites/enemyhit.png" id="5_fmxw4"]
[ext_resource type="Texture2D" uid="uid://dayvekyib3lxj" path="res://assets/sprites/enemywalk.png" id="5_xvryj"]
[ext_resource type="Texture2D" uid="uid://cloa3lw7ph1lm" path="res://assets/sprites/ref.png" id="5_yyhxy"]
[ext_resource type="Script" path="res://scripts/ref.gd" id="6_d1e7i"]
[ext_resource type="PackedScene" uid="uid://eqkes2x4r2q7" path="res://scenes/tennis_ball.tscn" id="8_4sn7c"]
[ext_resource type="Texture2D" uid="uid://dion57j7qamlg" path="res://assets/sprites/swing.png" id="8_iu3tl"]
[ext_resource type="Texture2D" uid="uid://cyxwlohwrt8d" path="res://assets/sprites/leftwalk(1).png" id="12_l75nv"]
[ext_resource type="FontFile" uid="uid://c46t5xebp6ewl" path="res://assets/fonts/AtariClassic-gry3.ttf" id="13_it78a"]
[ext_resource type="Script" path="res://scripts/score.gd" id="14_u1u5l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pov7g"]
size = Vector2(18.5, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_be4wx"]
size = Vector2(320, 20.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyxeo"]
atlas = ExtResource("5_fmxw4")
region = Rect2(0, 0, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed277"]
atlas = ExtResource("5_fmxw4")
region = Rect2(28, 0, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d3eb"]
atlas = ExtResource("5_fmxw4")
region = Rect2(0, 27, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gupu"]
atlas = ExtResource("5_fmxw4")
region = Rect2(28, 27, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkixv"]
atlas = ExtResource("5_xvryj")
region = Rect2(0, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_1i0xl"]
atlas = ExtResource("5_xvryj")
region = Rect2(0, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq3e1"]
atlas = ExtResource("5_xvryj")
region = Rect2(24, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7f30"]
atlas = ExtResource("5_xvryj")
region = Rect2(0, 27, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv72p"]
atlas = ExtResource("5_xvryj")
region = Rect2(24, 27, 24, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_ydvag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyxeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed277")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d3eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gupu")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkixv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i0xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq3e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7f30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv72p")
}],
"loop": true,
"name": &"walking",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4sr7s"]
size = Vector2(18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjlho"]
atlas = ExtResource("12_l75nv")
region = Rect2(0, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dtoa"]
atlas = ExtResource("8_iu3tl")
region = Rect2(0, 0, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix3vr"]
atlas = ExtResource("8_iu3tl")
region = Rect2(28, 0, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ru7y"]
atlas = ExtResource("8_iu3tl")
region = Rect2(0, 27, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb5ad"]
atlas = ExtResource("8_iu3tl")
region = Rect2(28, 27, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ox5t"]
atlas = ExtResource("12_l75nv")
region = Rect2(0, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_t80ag"]
atlas = ExtResource("12_l75nv")
region = Rect2(24, 0, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku38k"]
atlas = ExtResource("12_l75nv")
region = Rect2(0, 27, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwj4n"]
atlas = ExtResource("12_l75nv")
region = Rect2(24, 27, 24, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_k0iqw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjlho")
}],
"loop": true,
"name": &"idleleft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dtoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix3vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ru7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb5ad")
}],
"loop": false,
"name": &"swingleft",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ox5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t80ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku38k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwj4n")
}],
"loop": true,
"name": &"walkingleft",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydkl1"]
size = Vector2(17, 33)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m5g3i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mvopj"]
atlas = ExtResource("5_yyhxy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l66ox"]
atlas = ExtResource("5_yyhxy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lrd6"]
atlas = ExtResource("5_yyhxy")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1mp2y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvopj")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l66ox")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lrd6")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_syrvb"]
size = Vector2(318, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppyn5"]
size = Vector2(315, 20)

[node name="Game" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Label" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 96.0
offset_top = 60.0
offset_right = 816.0
offset_bottom = 151.0
theme_override_fonts/normal_font = ExtResource("13_it78a")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "15 - 40"

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 615.0
offset_right = 1146.0
offset_bottom = 638.0
theme_override_fonts/font = ExtResource("13_it78a")
theme_override_font_sizes/font_size = 20
text = "PRESS N FOR EASY AI, M FOR HARD"

[node name="TTMeter" type="ProgressBar" parent="CanvasLayer"]
offset_left = 18.0
offset_top = 14.0
offset_right = 354.0
offset_bottom = 41.0
value = 50.0
show_percentage = false
script = ExtResource("2_23gem")

[node name="Clamps" type="Node2D" parent="."]
position = Vector2(0, -32)

[node name="A" type="Node2D" parent="Clamps"]
position = Vector2(-20, 0)

[node name="B" type="Node2D" parent="Clamps"]
position = Vector2(19, 0)

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Boundaries" type="StaticBody2D" parent="."]
script = ExtResource("1_ap15m")

[node name="Left" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-169, 47)
shape = SubResource("RectangleShape2D_pov7g")

[node name="Right" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(169, 48)
shape = SubResource("RectangleShape2D_pov7g")

[node name="Bottom" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(0, 101)
shape = SubResource("RectangleShape2D_be4wx")

[node name="Top" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_be4wx")

[node name="TennisBall" parent="." instance=ExtResource("8_4sn7c")]
position = Vector2(63, 61)

[node name="Court" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1.52588e-05, -5.72205e-06)
scale = Vector2(2, 2)
texture = ExtResource("3_c3oly")

[node name="Enemy" type="Node2D" parent="."]
position = Vector2(-2, -68)
script = ExtResource("3_r17qu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Enemy"]
sprite_frames = SubResource("SpriteFrames_ydvag")
animation = &"idle"
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_4sr7s")

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(0, 70)
script = ExtResource("1_wsuso")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_k0iqw")
animation = &"swingleft"
autoplay = "idleleft"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_ydkl1")

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(0, 1.3125)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_m5g3i")

[node name="Ref" type="AnimatedSprite2D" parent="."]
position = Vector2(-124, -24)
scale = Vector2(1.6, 1.6)
sprite_frames = SubResource("SpriteFrames_1mp2y")
animation = &"down"
autoplay = "down"
script = ExtResource("6_d1e7i")

[node name="Scoreboxes" type="Node" parent="."]
script = ExtResource("14_u1u5l")

[node name="EnemyArea" type="Area2D" parent="Scoreboxes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scoreboxes/EnemyArea"]
position = Vector2(0, -92)
shape = SubResource("RectangleShape2D_syrvb")

[node name="PlayerArea" type="Area2D" parent="Scoreboxes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scoreboxes/PlayerArea"]
position = Vector2(1.5, 96)
shape = SubResource("RectangleShape2D_ppyn5")

[connection signal="animation_finished" from="Enemy/AnimatedSprite2D" to="Enemy" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Enemy/Area2D" to="Enemy" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Enemy/Area2D" to="Enemy" method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="Player/AnimatedSprite2D" to="Player" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Player/Area2D" to="Player" method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Scoreboxes/EnemyArea" to="Scoreboxes" method="_on_enemy_area_area_entered"]
[connection signal="area_entered" from="Scoreboxes/PlayerArea" to="Scoreboxes" method="_on_player_area_area_entered"]
